# UNALMED_SistemasTiempoReal

./: .gitignore  README.md
STR_Unal_Practica_1/: .gitignore  CMakeLists.txt  README.md  controllers.h  main.c  managers.h
STR_Unal_Practica_1/controllers/: brake.c  brake.h  doors.c  doors.h  hvac.c  hvac.h  lighting.c  lighting.h  velocity.c  velocity.h
STR_Unal_Practica_1/managers/: emergency_alarm.c  emergency_alarm.h  ticket.c  ticket.h
STR_Unal_Practica_2/: README.md
STR_Unal_Practica_2/project/01.simpleFork/: main.cpp
STR_Unal_Practica_2/project/02.noSoSimpleFork/: main.cpp  mainModified.cpp
STR_Unal_Practica_2/project/03.complexFork/: main.cpp
STR_Unal_Practica_2/project/04.ComparingTimes/: mainA.cpp  mainB.cpp
STR_Unal_Practica_2/project/05.moreFork/: main.cpp  mainModified.cpp  mainModified_p4.cpp
STR_Unal_Practica_2/project/06.threads/: prueba1  prueba1.c  pruebajoin.c
STR_Unal_Practica_2/project/07.processVSthreads/: 1_main_secuencial.c  2_main_forks.c  3_main_threads.c
STR_Unal_Practica_3/: README.md  a.out  main.c
STR_Unal_Practica_3/questionary/: 16.md  17.md  18.md
STR_Unal_Practica_3/src/project/02_you_do_you_dont/: 02_you_do_you_dont.ino
STR_Unal_Proyecto_Final/: README.md
STR_Unal_Proyecto_Final/arduino/robot_slave/: robot_slave.ino
STR_Unal_Proyecto_Final/arduino/robot_slave_rtos/: robot_slave_rtos.ino
STR_Unal_Proyecto_Final/c_algorithms/processInput/: processInput.c
STR_Unal_Proyecto_Final/sumobt/: .gitignore  arduino.ino  build.gradle
STR_Unal_Proyecto_Final/sumobt/app/: build.gradle
(+16 files in other folders)
